--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,9 +11,39 @@ header h1 {
     padding-top: .5rem;
     padding-bottom: .5rem;
 }
+hr{
+    display: none;
+}
 
-/* @media (min-width: 300px) and (max-width:700px){
-    body{
-        background-color: black;
+nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;    
+    padding-left: 0;
+    justify-content: space-around;
+    background-color: rgb(9, 9, 163);
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 2rem;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    border-radius: .3rem;
+}
+
+
+@media (min-width: 300px) and (max-width:700px){
+    nav ul {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
     }
-} */
+    nav ul:hover{
+        cursor: pointer;
+    }
+    hr{
+        display: flex;
+        width: 13rem;
+    }
+}
